<resources>
    <string name="app_name">Aromateque</string>
    <string name="fragrance_notes">Ноты аромата</string>
    <string name="top_notes">ВЕРХНИЕ НОТЫ</string>
    <string name="middle_notes">НОТЫ СЕРДЦА</string>
    <string name="base_notes">БАЗОВЫЕ НОТЫ</string>
    <string name="description_title">Описание %1$s</string>
    <string name="reviews_count">%1$s %2$s</string>
    <string name="brand_name">%1$s %2$s</string>
    <string name="country_year">%1$s, %2$s</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sku">АРТИКУЛ: %1$s</string>
    <string name="product_general">О товаре</string>
    <string name="product_description">Описание</string>
    <string name="product_reviews">Отзывы</string>
    <string name="product_price">%1$s грн</string>
    <string name="price">%1$s грн</string>
    <string name="product_qty">%1$s шт</string>
    <string name="short_description_title">Краткое описание</string>
    <string name="buy">КУПИТЬ</string>
    <string name="rating_20">НЕ ОЧЕНЬ</string>
    <string name="rating_40">ТАК СЕБЕ</string>
    <string name="rating_60">НЕПЛОХОЙ</string>
    <string name="rating_80">ПОНРАВИЛСЯ</string>
    <string name="rating_100">В ВОСТОРГЕ</string>
    <string name="no_reviews">Отзывы отсутствуют.</string>
    <string name="phone">067 611&#8211;89&#8211;41</string>
    <string name="catalog">Каталог товаров:</string>
    <string name="aromateque">Aromateque</string>
    <string name="subcategory_title">%1$s:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="sort_title">Сортировка</string>
    <string name="sort_title_2">Параметры сортировки</string>
    <string name="sort_sorting">Сортировка:</string>
    <string name="sort_list_type">Вид списка</string>
    <string name="apply">применить</string>
    <string name="close">закрыть</string>
    <string name="cheaper_first">Сначала дешевле</string>
    <string name="expensive_first">Сначала дороже</string>
    <string name="latest">Новинки</string>
    <string name="discount">Скидка</string>
    <string name="not_selected">не выбран</string>
    <string name="filter">Фильтр</string>
    <string name="reset">сбросить</string>
    <string name="filter_title_2">Подбор по параметрам</string>
    <string name="from">от</string>
    <string name="to">до</string>
    <string name="uah">грн</string>
    <string name="in_total">Итого к оплате:</string>
    <string name="to_checkout">ОФОРМИТЬ ЗАКАЗ</string>
    <string name="cart">Корзина</string>
    <string name="main_page">Главная</string>
    <string name="callback">Обратная связь</string>
    <string name="info">Информация</string>
    <string name="title_activity_info">Информация</string>
    <string name="title_activity_callback">Обратная связь</string>
    <string name="title_activity_make_review">Отзыв</string>
    <string name="title_activity_checkout_main">Оформление заказа</string>
    <string name="about">О компании</string>
    <string name="our_stores">Наши магазины</string>
    <string name="payment_and_delivery">Оплата и доставка</string>
    <string name="q_a">Вопрос - ответ</string>
    <string name="call">Позвонить</string>
    <string name="send_email">Отправить письмо</string>
    <string name="make_review">НАПИСАТЬ ОТЗЫВ</string>
    <string name="no_email_clients">Не найдены приложения для отправки электронной почты.</string>
    <string name="review_1">Ваши впечатления*</string>
    <string name="name_surname">Имя и Фамилия*</string>
    <string name="email">E-mail</string>
    <string name="review_2">Опишите свое мнение*</string>
    <string name="send">ОТПРАВИТЬ</string>
    <string name="review_no_rating">ВЫБЕРИТЕ ОЦЕНКУ</string>
    <string name="review_no_review">ВВЕДИТЕ ОТЗЫВ</string>
    <string name="review_no_name">ВВЕДИТЕ ИМЯ</string>
    <string name="required_fields">*Обязательные поля</string>
    <string name="bad_email">EMAIL ВВЕДЕН НЕВЕРНО</string>
    <string name="phone_num">Номер телефона*</string>
    <string name="email_obligatory">E-mail*</string>
    <string name="city_obligatory">Выберите город*</string>
    <string name="checkout_no_city">ВЫБЕРИТЕ ГОРОД</string>
    <string name="checkout_no_name">ВВЕДИТЕ ИМЯ</string>
    <string name="checkout_no_phone">ВВЕДИТЕ ТЕЛЕФОН</string>
    <string name="checkout_no_email">ВВЕДИТЕ EMAIL</string>
    <string name="no_email">ВВЕДИТЕ EMAIL</string>
    <string name="title_activity_checkout_city">ActivityCheckoutCity</string>
    <string name="enter_city">Введите город для доставки</string>
    <string name="choose_city">Выберите город</string>
    <string name="choose_delivery">Выбор доставки</string>
    <string name="delivery_type">Способ доставки</string>
    <string name="deliver_type_the_one">Новая Почта, самовывоз из отделения</string>
    <string name="nova_poshta_departments">Отделение Новой Почты</string>
    <string name="warehouse_placeholder">Выберите отделение</string>
    <string name="choose_department">Выберите отделение</string>
    <string name="enter_warehouse">Поиск отделения</string>
    <string name="city_first">Сначала выберите город</string>
    <string name="checkout">Оформление заказа</string>
    <string name="order">ЗАКАЗ</string>
    <string name="nova_poshta_warehouse">Отделение Новой Почты</string>
    <string name="delivery_price">Стоимость доставки</string>
    <string name="delivery_type_chosen">Новая Почта, самовывоз из отделения</string>
    <string name="payment_method">Способ оплаты</string>
    <string name="gift_wrap">Подарочная упаковка</string>
    <string name="dont_call">Не звонить без необходимости</string>
    <string name="order_comment">Комментарий к заказу</string>
    <string name="checkout_pay_title">СУММА ЗАКАЗА</string>
    <string name="checkout_pay">Сумма к оплате:</string>
    <string name="use_certificate">Оплатить сертификатом</string>
    <string name="finalize_order">ПОДТВЕРДИТЬ ЗАКАЗ</string>
    <string name="warehouse_number_with_city">%1$s, %2$s</string>
    <string name="free">Бесплатно</string>
    <string name="delivery_estimate">от 40 грн</string>
    <string name="subscribe">Хочу узнавать о новинках и акциях</string>
    <string name="ok">Выбрать</string>
    <string name="ok_2">Выбрать</string>
    <string name="ok_very">ОТЛИЧНО</string>
    <string name="cancel">Отменить</string>
    <string name="ok_order_comment">Подвердить</string>
    <string name="enter_certificate">Введите номер сертификата</string>
    <string name="favorites">Избранное</string>
    <string name="no_settlement_found">Не найдено населенного пункта отвечающего вашему запросу</string>
    <string name="order_success_1">Ваш заказ принят, спасибо!</string>
    <string name="manager_will_call">В ближайшее время с вами свяжется наш менеджер.</string>
    <string name="manager_will_call_at_monday">Наш менеджер перезвонит вам утром ближайшего понедельника.</string>
    <string name="order_number">№ %1$s</string>
    <string name="order_sum">Итого к оплате:</string>
    <string name="cart_price_placeholder">0 грн</string>


</resources>
