<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_page"
            android:icon="@drawable/black_menu"
            android:title="@string/main_page" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ico_cart_empty"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/heart_black"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_callback"
            android:icon="@drawable/ico_mail"
            android:title="@string/callback" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ico_info"
            android:title="@string/info" />
    </group>

</menu>
