<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/filter_title_2"
            android:textColor="@color/transparent_white"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/top_panel"
        android:layout_above="@+id/bottom_panel">

        <RelativeLayout
            android:id="@+id/active_values_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/parameter_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@id/top_panel" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:elevation="4dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/apply"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical|end"
            android:onClick="onCloseClicked"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textColor="@color/dark_gray" />

        <TextView
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:onClick="onCloseClicked"
            android:text="@string/apply"
            android:textAllCaps="true"
            android:textColor="@color/main" />
    </RelativeLayout>
</RelativeLayout>